syntax = "proto3";

option go_package = "github.com/Montheankul-K/game-microservices";

message AccessTokenSearchReq {
  string accessToken = 1;
}

message AccessTokenSearchRes {
  bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {
  int64 count = 1;
}

service AuthGrpcService {
  rpc CredentialSearch (AccessTokenSearchReq) returns (AccessTokenSearchRes);
  rpc RolesCount (RolesCountReq) returns (RolesCountRes);
}